upgrade to rider 2022.2
Signed-off-by: shalom <shalom938@gmail.com>