@@ -157,13 +157,15 @@ tasks {
         // Rider's backend doesn't support dynamic plugins. It might be possible to work with auto-reload of the frontend
         // part of a plugin, but there are dangers about keeping plugins in sync
         autoReloadPlugins.set(false)
+        //workaround, it's a Gradle IntelliJ Plugin issue
+        jvmArgs = listOf("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
     }
 
 
     listProductsReleases {
 //        types.set(listOf("RD","IC","PC","IU"))
         types.set(listOf("RD"))
-        sinceVersion.set("2022.2")
+        sinceVersion.set("2022.1")
         untilVersion.set("2022.2")
 //        sinceBuild.set("221.5787.35")
 //        untilBuild.set("221.5591.21")
